--- a/index.html
+++ b/index.html
@@ -29,5 +29,17 @@
             </div>
         </nav>
     </header>
+    <section class="container">
+        <div class="banner">
+            <div class="banner-left">
+                <h2>Start your journey as fluencer</h2>
+                <p>Cameras make the world easies to capture anything you see. Capturing something attractive make you more advanced</p>
+                <button>Prebook now <i class="fas fa-arrow-right"></i></button>
+            </div>
+            <div class="banner-right">
+                <img src="./images/main-camera.png" alt="">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
