--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +11,7 @@
     <!-- fontawesome assets -->
     <script src="https://kit.fontawesome.com/f01a735193.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <!-- header -->
     <header>
@@ -33,7 +35,8 @@
         <div class="banner">
             <div class="banner-left">
                 <h2>Start your journey as fluencer</h2>
-                <p>Cameras make the world easies to capture anything you see. Capturing something attractive make you more advanced</p>
+                <p>Cameras make the world easies to capture anything you see. Capturing something attractive make you
+                    more advanced</p>
                 <button>Prebook now <i class="fas fa-arrow-right"></i></button>
             </div>
             <div class="banner-right">
@@ -41,5 +44,19 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="logo-container">
+            <div class="company-logo">
+                <img src="./logos/Alibaba.svg" alt="">
+                <img src="./logos/Amazon.svg" alt="">
+                <img src="./logos/Daraz.pk Logo.svg" alt="">
+                <img src="./logos/Ebay.svg" alt="">
+                <img src="./logos/Rakuten.svg" alt="">
+                <img src="./logos/Target.svg" alt="">
+                <img src="./logos/Walmart.svg" alt="">
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
