--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h2>Start your journey as fluencer</h2>
                 <p>Cameras make the world easies to capture anything you see. Capturing something attractive make you
                     more advanced</p>
-                <button>Prebook now <i class="fas fa-arrow-right"></i></button>
+                <button class="btn">Prebook now <i class="fas fa-arrow-right"></i></button>
             </div>
             <div class="banner-right">
                 <img src="./images/main-camera.png" alt="">
@@ -57,6 +57,213 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="collection">
+            <h2 class="collection-title">Popular Collection</h2>
+            <div class="products">
+                <div class="product">
+                    <div class="product-img">
+                        <img src="./images/tripod.png" alt="">
+                    </div>
+                    <div class="product-detail">
+                        <h2 class="product-name">Flex Tripod</h2>
+                        <h3 class="product-price">$50.48</h3>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star-half-alt"></i>
+                        <span class="rate-number">4.99</span>
+                    </div>
+                    <div class="product-info">
+                        <p>Wordwide shifting <br> available
+                            <br>Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img">
+                        <img src="./images/mic.png" alt="">
+                    </div>
+                    <div class="product-detail">
+                        <h2 class="product-name">microphone</h2>
+                        <h3 class="product-price">$120.25</h3>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star-half-alt"></i>
+                        <span class="rate-number">4.99</span>
+                    </div>
+                    <div class="product-info">
+                        <p>Wordwide shifting <br> available
+                            <br>Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img">
+                        <img src="./images/airpod.png" alt="">
+                    </div>
+                    <div class="product-detail">
+                        <h2 class="product-name">Airbuds</h2>
+                        <h3 class="product-price">$100.00</h3>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star-half-alt"></i>
+                        <span class="rate-number">4.99</span>
+                    </div>
+                    <div class="product-info">
+                        <p>Wordwide shifting <br> available
+                            <br>Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img">
+                        <img src="./images/drone.png" alt="">
+                    </div>
+                    <div class="product-detail">
+                        <h2 class="product-name">Drone</h2>
+                        <h3 class="product-price">$980.25</h3>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star-half-alt"></i>
+                        <span class="rate-number">4.99</span>
+                    </div>
+                    <div class="product-info">
+                        <p>Wordwide shifting <br> available
+                            <br>Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img">
+                        <img src="./images/lights.png" alt="">
+                    </div>
+                    <div class="product-detail">
+                        <h2 class="product-name">Light Setup</h2>
+                        <h3 class="product-price">$1200.00</h3>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star-half-alt"></i>
+                        <span class="rate-number">4.99</span>
+                    </div>
+                    <div class="product-info">
+                        <p>Wordwide shifting <br> available
+                            <br>Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img">
+                        <img src="./images/setup.png" alt="">
+                    </div>
+                    <div class="product-detail">
+                        <h2 class="product-name">Photoshoot Set</h2>
+                        <h3 class="product-price">$820.40</h3>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star-half-alt"></i>
+                        <span class="rate-number">4.99</span>
+                    </div>
+                    <div class="product-info">
+                        <p>Wordwide shifting <br> available
+                            <br>Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img">
+                        <img src="./images/camera.png" alt="">
+                    </div>
+                    <div class="product-detail">
+                        <h2 class="product-name">Vlogging Camera</h2>
+                        <h3 class="product-price">$1800.80</h3>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star-half-alt"></i>
+                        <span class="rate-number">4.99</span>
+                    </div>
+                    <div class="product-info">
+                        <p>Wordwide shifting <br> available
+                            <br>Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img">
+                        <img src="./images/single-light.png" alt="">
+                    </div>
+                    <div class="product-detail">
+                        <h2 class="product-name">Green Screen</h2>
+                        <h3 class="product-price">$25.48</h3>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star-half-alt"></i>
+                        <span class="rate-number">4.99</span>
+                    </div>
+                    <div class="product-info">
+                        <p>Wordwide shifting <br> available
+                            <br>Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="product-img">
+                        <img src="./images/action.png" alt="">
+                    </div>
+                    <div class="product-detail">
+                        <h2 class="product-name">Action Camera</h2>
+                        <h3 class="product-price">$380.00</h3>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star"></i>
+                        <i class="product-rate-icon fas fa-star-half-alt"></i>
+                        <span class="rate-number">4.99</span>
+                    </div>
+                    <div class="product-info">
+                        <p>Wordwide shifting <br> available
+                            <br>Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="more-product">
+                <span>See More</span>
+                <i class="fas fa-arrow-right"></i>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="footer-title">
+            <h2>Influencer Products</h2>
+        </div>
+        <div class="footer-copyright">
+            <small>Copyright &copy; 2020 influencer products</small>
+            <br>
+            <small>All rights reserved</small>
+        </div>
+        <div class="social-link">
+            <i class="fab fa-facebook"></i>
+            <i class="fas fa-poll"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-tumblr-square"></i>
+        </div>
+    </footer>
 </body>
 
 </html>
