complete-desktop-screen

--- a/index.html
+++ b/index.html
@@ -248,6 +248,25 @@
             </div>
         </div>
     </section>
+    <section class="container">
+        <div class="explore">
+            <div class="support">
+                <img src="./images/where-to-buy.svg" alt="">
+                <h3 class="support-title">Where to buy</h3>
+                <span class="learn-more">Learn More <i class="fas fa-arrow-right"></i></span>
+            </div>
+            <div class="support">
+                <img src="./images/support.svg" alt="">
+                <h3 class="support-title">Support</h3>
+                <span class="learn-more">Learn More <i class="fas fa-arrow-right"></i></span>
+            </div>
+            <div class="support">
+                <img src="./images/location.svg" alt="">
+                <h3 class="support-title">Location</h3>
+                <span class="learn-more">Learn More <i class="fas fa-arrow-right"></i></span>
+            </div>
+        </div>
+    </section>
     <footer>
         <div class="footer-title">
             <h2>Influencer Products</h2>
