--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             </div>
         </nav>
     </header>
+    <!-- start banner section -->
     <section class="container">
         <div class="banner">
             <div class="banner-left">
@@ -44,6 +45,9 @@
             </div>
         </div>
     </section>
+    <!-- end the banner section -->
+
+    <!-- Brand Partners -->
     <section>
         <div class="logo-container">
             <div class="company-logo">
@@ -57,6 +61,8 @@
             </div>
         </div>
     </section>
+    <!-- End section of brand partners -->
+    <!-- Products collection -->
     <section>
         <div class="collection">
             <h2 class="collection-title">Popular Collection</h2>
@@ -248,6 +254,8 @@
             </div>
         </div>
     </section>
+    <!-- End Product Collection -->
+    <!-- Support of us -->
     <section class="container">
         <div class="explore">
             <div class="support">
@@ -267,6 +275,8 @@
             </div>
         </div>
     </section>
+    <!-- Support of US end here -->
+    <!-- Last section of the site -->
     <footer>
         <div class="footer-title">
             <h2>Influencer Products</h2>
@@ -283,6 +293,7 @@
             <i class="fab fa-tumblr-square"></i>
         </div>
     </footer>
+    <!-- End of the Site -->
 </body>
 
 </html>
